force-app/main/default/objects/ApprovalProcess__c/ApprovalProcess__c.object-meta.xml
<CustomObject>
    <description
	>Este objeto mantiene el control de aprobación para cambios que se llevarán a cabo de forma masiva en distintos objetos.</description>
    <label>Proceso de aprobación</label>
    <nameField>
        <displayFormat>AP{00000000}</displayFormat>
        <label>Número de aprobación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procesos de aprobación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>