force-app/main/default/objects/ApprovalProcess__c/fields/Acuerdo_firmado_que_establezca_el_decrem__c.field-meta.xml
<CustomField>
    <fullName>Acuerdo_firmado_que_establezca_el_decrem__c</fullName>
    <defaultValue>false</defaultValue>
    <description
	>En el caso de decrementos, un acuerdo firmado que establezca el acuerdo</description>
    <label>Acuerdo de decremento</label>
    <type>Checkbox</type>
</CustomField>