force-app/main/default/objects/ApprovalProcess__c/fields/Adendum__c.field-meta.xml
<CustomField>
    <fullName>Adendum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>- Si requiere adendum</description>
    <label>Adendum</label>
    <type>Checkbox</type>
</CustomField>