force-app/main/default/objects/ApprovalProcess__c/fields/ApprovalComercial__c.field-meta.xml
<CustomField>
    <fullName>ApprovalComercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación por comercial</label>
    <type>Checkbox</type>
</CustomField>