force-app/main/default/objects/ApprovalProcess__c/fields/ApprovalFinances__c.field-meta.xml
<CustomField>
    <fullName>ApprovalFinances__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aprobación requerida por finanzas</description>
    <label>Aprobación por finanzas</label>
    <type>Checkbox</type>
</CustomField>