force-app/main/default/objects/ApprovalProcess__c/fields/Aprobacion_por_comite_directivo__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_por_comite_directivo__c</fullName>
    <description
	>Valida si el proceso de aprobación es por comité directivo</description>
    <formula
	>IF( AND( Es_Telmex__c , OR( Decremento_VTC_Respecto_EP__c &gt;= 0.15, Decremento_VTC_Respecto_Cuenta__c &gt;= 0.05,  Decremento_en_VTC__c &gt;= 500000)),true, 
IF(AND(NOT(Es_Telmex__c) , OR( Decremento_VTC_Respecto_EP__c &gt;= 0.10, Decremento_VTC_Respecto_Cuenta__c &gt;= 0.05,  Decremento_en_VTC__c &gt;= 500000)), true, false))</formula>
    <inlineHelpText
	>Valida si el proceso de aprobación es por comité directivo</inlineHelpText>
    <label>Aprobación por comité directivo</label>
    <type>Checkbox</type>
</CustomField>