force-app/main/default/objects/ApprovalProcess__c/fields/Cantidad_de_facturas_pendientes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_facturas_pendientes__c</fullName>
    <description>- Facturas pendientes de pago</description>
    <label>Cantidad de facturas pendientes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>