force-app/main/default/objects/ApprovalProcess__c/fields/Cantidad_de_Sitios__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Sitios__c</fullName>
    <description>Cantidad de sitios en el Expediente de proyecto, se usa en plantillas de correos</description>
    <formula>Opportunity__r.Cantidad_de_Sitios__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cantidad de sitios en el Expediente de proyecto, se usa en plantillas de correos</inlineHelpText>
    <label>Cantidad de Sitios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>