force-app/main/default/objects/ApprovalProcess__c/fields/CAPEX__c.field-meta.xml
<CustomField>
    <fullName>CAPEX__c</fullName>
    <inlineHelpText>Documentar el CAPEX que se requeriría para los proyectos.</inlineHelpText>
    <label>CAPEX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>