force-app/main/default/objects/ApprovalProcess__c/fields/Carta_finiquito__c.field-meta.xml
<CustomField>
    <fullName>Carta_finiquito__c</fullName>
    <defaultValue>false</defaultValue>
    <description>- En caso de terminación del contrato, carta finiquito.</description>
    <label>Carta finiquito</label>
    <type>Checkbox</type>
</CustomField>