force-app/main/default/objects/ApprovalProcess__c/fields/Carta_solicitud_de_baja_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Carta_solicitud_de_baja_del_cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Carta firmada por un funcionario autorizado con la solicitud del cliente</description>
    <label>Carta solicitud de baja del cliente</label>
    <type>Checkbox</type>
</CustomField>