force-app/main/default/objects/ApprovalProcess__c/fields/ChangeApprovalStages__c.field-meta.xml
<CustomField>
    <fullName>ChangeApprovalStages__c</fullName>
    <description>Etapas del proceso de aprobación para cambios.</description>
    <inlineHelpText>Etapas del proceso de aprobación para cambios.</inlineHelpText>
    <label>Aprobación de cambios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iniciado</fullName>
            </value>
            <value>
                <fullName>Solicitado</fullName>
            </value>
            <value>
                <fullName>Documentación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>