force-app/main/default/objects/ApprovalProcess__c/fields/Clausula_rescision_cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Clausula_rescision_cancelacion__c</fullName>
    <description>&apos;- Cláusulas del contrato referentes a la cancelación del servicio</description>
    <label>Cláusula rescisión / cancelación</label>
    <length>1300</length>
    <type>Html</type>
</CustomField>