force-app/main/default/objects/ApprovalProcess__c/fields/Clausulas_relevantes__c.field-meta.xml
<CustomField>
    <fullName>Clausulas_relevantes__c</fullName>
    <description>- Implicaciones por cancelación de segmento</description>
    <label>Cláusulas relevantes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>