force-app/main/default/objects/ApprovalProcess__c/fields/Cliente_Final__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Final__c</fullName>
    <description
	>Obtiene el nombre del cliente final, se usa para plantilla de correos</description>
    <formula>Opportunity__r.Cliente_Final__c</formula>
    <inlineHelpText
	>Obtiene el nombre del cliente final, se usa para plantilla de correos</inlineHelpText>
    <label>Cliente Final</label>
    <type>Text</type>
</CustomField>