force-app/main/default/objects/ApprovalProcess__c/fields/Compromiso_de_pago_de_penalizacion_o_fin__c.field-meta.xml
<CustomField>
    <fullName>Compromiso_de_pago_de_penalizacion_o_fin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Compromiso de pago de penalización o finiquito</description>
    <label>Compromiso de pago de penalización o fin</label>
    <type>Checkbox</type>
</CustomField>