force-app/main/default/objects/ApprovalProcess__c/fields/Considerar_cobros_unicos__c.field-meta.xml
<CustomField>
    <fullName>Considerar_cobros_unicos__c</fullName>
    <label>Considerar cobros únicos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>