force-app/main/default/objects/ApprovalProcess__c/fields/Contacto_Administrativo__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Administrativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se cuenta con el contacto administrativo</description>
    <label>Contacto Administrativo</label>
    <type>Checkbox</type>
</CustomField>