force-app/main/default/objects/ApprovalProcess__c/fields/Contacto_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Comercial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requisito para validar &quot;Se cuenta con el contacto comercial&quot;</description>
    <label>Contacto Comercial</label>
    <type>Checkbox</type>
</CustomField>