force-app/main/default/objects/ApprovalProcess__c/fields/Contacto_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Tecnico__c</fullName>
    <description>Requisito para validar &quot;Se cuenta con el contacto técnico&quot;</description>
    <inlineHelpText>Indicar si en funciones de contacto se tiene el contacto Técnico / Líder de proyecto del cliente para gestionar la implementación de los servicios o sitios adicionales.</inlineHelpText>
    <label>Contacto Técnico</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Aplica</fullName>
                <default>true</default>
                <label>No Aplica</label>
            </value>
            <value>
                <fullName>Cumple</fullName>
            </value>
            <value>
                <fullName>No Cumple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>