force-app/main/default/objects/ApprovalProcess__c/fields/Costos_por_cubrir__c.field-meta.xml
<CustomField>
    <fullName>Costos_por_cubrir__c</fullName>
    <description>- Costos por cubrir para llegar a la rentabilidad indicada del proyecto</description>
    <label>Costos por cubrir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>