force-app/main/default/objects/ApprovalProcess__c/fields/Cotizaci_n_final__c.field-meta.xml
<CustomField>
    <fullName>Cotizaci_n_final__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se cuenta con la cotización firmada por el cliente</description>
    <label>Cotización final</label>
    <type>Checkbox</type>
</CustomField>