force-app/main/default/objects/ApprovalProcess__c/fields/Decremento_en_VTC__c.field-meta.xml
<CustomField>
    <fullName>Decremento_en_VTC__c</fullName>
    <label>Decremento en VTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>