force-app/main/default/objects/ApprovalProcess__c/fields/Decremento_VTC_Respecto_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Decremento_VTC_Respecto_Cuenta__c</fullName>
    <description
	>Calcula el porcentaje del decremento con respecto al valor total de la cuenta</description>
    <formula
	>IF(ISBLANK(Decremento_en_VTC__c) , 0, Decremento_en_VTC__c/  Total_de_la_cuenta__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
	>Calcula el porcentaje del decremento con respecto al valor total de la cuenta</inlineHelpText>
    <label>% Decremento VTC Respecto Cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>