force-app/main/default/objects/ApprovalProcess__c/fields/Decremento_VTC_Respecto_EP__c.field-meta.xml
<CustomField>
    <fullName>Decremento_VTC_Respecto_EP__c</fullName>
    <description
	>Calcula el porcentaje del decremento respecto al VTC del proyecto</description>
    <formula
	>IF(ISBLANK(Decremento_en_VTC__c) , 0, Decremento_en_VTC__c/ Total_del_proyecto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
	>Calcula el porcentaje del decremento respecto al VTC del proyecto</inlineHelpText>
    <label>% Decremento VTC Respecto EP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>