force-app/main/default/objects/ApprovalProcess__c/fields/Diagrama_de_Arquitectura__c.field-meta.xml
<CustomField>
    <fullName>Diagrama_de_Arquitectura__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requisito para validar &quot;Se cuenta con el diagrama de arquitectura&quot;</description>
    <label>Diagrama de Arquitectura</label>
    <type>Checkbox</type>
</CustomField>