force-app/main/default/objects/ApprovalProcess__c/fields/Divisa_CAPEX__c.field-meta.xml
<CustomField>
    <fullName>Divisa_CAPEX__c</fullName>
    <label>Divisa CAPEX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>