force-app/main/default/objects/ApprovalProcess__c/fields/EBIT__c.field-meta.xml
<CustomField>
    <fullName>EBIT__c</fullName>
    <description>EBIT = Cash Flow - Depreciación</description>
    <inlineHelpText>EBIT = Cash Flow - Depreciación</inlineHelpText>
    <label>EBIT</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>