force-app/main/default/objects/ApprovalProcess__c/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <description>EBITDA = Margen Bruto - Gastos</description>
    <inlineHelpText>EBITDA = Margen Bruto - Gastos</inlineHelpText>
    <label>EBITDA</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>