force-app/main/default/objects/ApprovalProcess__c/fields/Ejecutivo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_de_ventas__c</fullName>
    <description
	>Obtiene el nombre del propietario del expediente de proyecto</description>
    <formula
	>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Owner.LastName</formula>
    <inlineHelpText
	>Obtiene el nombre del propietario del expediente de proyecto</inlineHelpText>
    <label>Ejecutivo de ventas</label>
    <type>Text</type>
</CustomField>