force-app/main/default/objects/ApprovalProcess__c/fields/El_contrato_permite_la_baja_anticipada__c.field-meta.xml
<CustomField>
    <fullName>El_contrato_permite_la_baja_anticipada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El contrato sí permite realizar la baja anticipada</description>
    <label>¿El contrato permite la baja anticipada?</label>
    <type>Checkbox</type>
</CustomField>