force-app/main/default/objects/ApprovalProcess__c/fields/Es_Telmex__c.field-meta.xml
<CustomField>
    <fullName>Es_Telmex__c</fullName>
    <formula>OR(Opportunity__r.Account.Id == &apos;001d000001NERv3AAH&apos;,
    Opportunity__r.Account.Id == &apos;0010W00002Zft1oQAB&apos;, 
    Opportunity__r.Account.Id == &apos;0010W00002PVYCfQAP&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Es de Telmex?</label>
    <type>Checkbox</type>
</CustomField>