force-app/main/default/objects/ApprovalProcess__c/fields/Es_viable_hacer_evaluaci_n_financiera__c.field-meta.xml
<CustomField>
    <fullName>Es_viable_hacer_evaluaci_n_financiera__c</fullName>
    <label>Es viable hacer evaluación financiera?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>