force-app/main/default/objects/ApprovalProcess__c/fields/Fecha_Cierre_EP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cierre_EP__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Fecha Cierre EP</label>
    <type>Date</type>
</CustomField>