force-app/main/default/objects/ApprovalProcess__c/fields/Fecha_de_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_aprobacion__c</fullName>
    <label>Fecha de aprobación</label>
    <type>DateTime</type>
</CustomField>