force-app/main/default/objects/ApprovalProcess__c/fields/Fecha_de_Desactivacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Desactivacion__c</fullName>
    <description>Esta fecha será considerada por el PM para establecer la fecha de desactivación en CoS para el sitio</description>
    <inlineHelpText>Fecha Desactivado para la RE en CoS</inlineHelpText>
    <label>Fecha de Desactivación</label>
    <type>Date</type>
</CustomField>