force-app/main/default/objects/ApprovalProcess__c/fields/Fecha_fin_del_proyecto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin_del_proyecto__c</fullName>
    <formula>Opportunity__r.Fecha_fin_proyecto__c</formula>
    <label>Fecha fin del proyecto</label>
    <type>Date</type>
</CustomField>