force-app/main/default/objects/ApprovalProcess__c/fields/Fecha_final_pactada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_final_pactada__c</fullName>
    <description>Fecha final pactada del expediente de proyecto</description>
    <formula>Opportunity__r.Fecha_pactada_fin_de_vigencia__c</formula>
    <inlineHelpText>Fecha final pactada del expediente de proyecto</inlineHelpText>
    <label>Fecha final pactada</label>
    <type>Date</type>
</CustomField>