force-app/main/default/objects/ApprovalProcess__c/fields/Fecha_Implementacion_de_Baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Implementacion_de_Baja__c</fullName>
    <description>Esta fecha se utiliza para las bajas de Telmex; es la fecha cuando se notificará la baja de las referencias a PM, el cual son 15 días naturales después de que el proceso de aprobación pase a Aprobado.</description>
    <label>Fecha Implementación de Baja</label>
    <type>Date</type>
</CustomField>