force-app/main/default/objects/ApprovalProcess__c/fields/Fecha_Inicio_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_de_Proyecto__c</fullName>
    <formula>Opportunity__r.Fecha_inicio_de_proyecto__c</formula>
    <label>Fecha Inicio de Proyecto</label>
    <type>Date</type>
</CustomField>