force-app/main/default/objects/ApprovalProcess__c/fields/Fecha_Inicio_Pactada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Pactada__c</fullName>
    <description>En caso de que los productos de oportunidad deban tener un una fecha de inicio fija, ingrese la fecha</description>
    <inlineHelpText>En caso de que los productos de oportunidad deban tener un una fecha de inicio fija, ingrese la fecha</inlineHelpText>
    <label>Fecha de Inicio Pactada</label>
    <type>Date</type>
</CustomField>