force-app/main/default/objects/ApprovalProcess__c/fields/Flujo_de_Efectivo__c.field-meta.xml
<CustomField>
    <fullName>Flujo_de_Efectivo__c</fullName>
    <description
	>FLUJO DE EFECTIVO = EBITDA - Inversiones - Flujo después de financiamiento</description>
    <inlineHelpText
	>FLUJO DE EFECTIVO = EBITDA - Inversiones - Flujo después de financiamiento</inlineHelpText>
    <label>Flujo de Efectivo</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>