force-app/main/default/objects/ApprovalProcess__c/fields/Implicaciones_cancelacion_de_segmento__c.field-meta.xml
<CustomField>
    <fullName>Implicaciones_cancelacion_de_segmento__c</fullName>
    <label>Monto de penalización por cancelación SE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>