force-app/main/default/objects/ApprovalProcess__c/fields/Incremento_en_VTC__c.field-meta.xml
<CustomField>
    <fullName>Incremento_en_VTC__c</fullName>
    <label>Incremento en VTC</label>
    <summarizedField>OpportunityItemConsent__c.Partida_de_Ventas_Conv_MXN__c</summarizedField>
    <summaryForeignKey>OpportunityItemConsent__c.Proceso_de_aprobacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>