force-app/main/default/objects/ApprovalProcess__c/fields/Indicadores_Financieros__c.field-meta.xml
<CustomField>
    <fullName>Indicadores_Financieros__c</fullName>
    <description
	>Suma de indicadores financieros ubicado en la sección &quot;PRICING - Indicadores Financieros al cierre de la venta&quot; en el Expediente Proyecto</description>
    <formula
	>(Opportunity__r.Margen_Bruto__c +  Opportunity__r.EBITDA__c +  Opportunity__r.Flujo_de_Efectivo__c +  Opportunity__r.EBIT__c +  Opportunity__r.Payback__c +  Opportunity__r.ROI__c +  Opportunity__r.TIR__c) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicadores Financieros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>