force-app/main/default/objects/ApprovalProcess__c/fields/Ingresos_por_cubrir__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_por_cubrir__c</fullName>
    <description>- Ingresos por cubrir para llegar a la rentabilidad indicada del proyecto</description>
    <label>Ingresos por cubrir</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>