force-app/main/default/objects/ApprovalProcess__c/fields/Link_Google_Drive_PM__c.field-meta.xml
<CustomField>
    <fullName>Link_Google_Drive_PM__c</fullName>
    <inlineHelpText>Agregar el link de google drive donde se encuentra la carpeta que contiene la información técnica requerida para la implementación (diagrama de arquitectura de red, información complementaria de los sitios, propuesta o alcance técnico, etc.)</inlineHelpText>
    <label>Link Google Drive PM</label>
    <type>Url</type>
</CustomField>