force-app/main/default/objects/ApprovalProcess__c/fields/Link_Google_Drive_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Link_Google_Drive_Presupuesto__c</fullName>
    <description>Se debe agregar el link donde se encuentra el presupuesto de implementaciones</description>
    <inlineHelpText>Agregar el link de la carpeta donde se encuentra el presupuesto para la implementación de sitios o productos adicionales.</inlineHelpText>
    <label>Link Google Drive Presupuesto</label>
    <type>Url</type>
</CustomField>