force-app/main/default/objects/ApprovalProcess__c/fields/LinkToApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>LinkToApprovalProcess__c</fullName>
    <description>El link que te llevará al proceso de aprobación, se usa en las plantillas de correo</description>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;  Id ,  Name ,&quot;_self&quot; )</formula>
    <inlineHelpText>El link que te llevará al proceso de aprobación, se usa en las plantillas de correo</inlineHelpText>
    <label>LinkToApprovalProcess</label>
    <type>Text</type>
</CustomField>