force-app/main/default/objects/ApprovalProcess__c/fields/LinkToOpportunity__c.field-meta.xml
<CustomField>
    <fullName>LinkToOpportunity__c</fullName>
    <description>Link a Expediente de Proyecto, se usa para plantilla de correo</description>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;   Opportunity__r.Id , OpportunityName__c,&quot;_self&quot; )</formula>
    <inlineHelpText>Link a Expediente de Proyecto, se usa para plantilla de correo</inlineHelpText>
    <label>LinkToOpportunity</label>
    <type>Text</type>
</CustomField>