force-app/main/default/objects/ApprovalProcess__c/fields/Lista_de_Sitios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Sitios__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requisito para validar &quot;Se cuenta con la lista de sitios&quot;</description>
    <label>Lista de Sitios</label>
    <type>Checkbox</type>
</CustomField>