force-app/main/default/objects/ApprovalProcess__c/fields/Margen_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Margen_Bruto__c</fullName>
    <description>Margen Bruto = Ingresos - costos directos</description>
    <inlineHelpText>Margen Bruto = Ingresos - costos directos</inlineHelpText>
    <label>Margen Bruto</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>