force-app/main/default/objects/ApprovalProcess__c/fields/Mismos_campos_de_indicadores_financieros__c.field-meta.xml
<CustomField>
    <fullName>Mismos_campos_de_indicadores_financieros__c</fullName>
    <description>- Indicadores financieros del proyecto a la fecha de solicitud de baja</description>
    <label>Mismos campos de indicadores financieros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>