force-app/main/default/objects/ApprovalProcess__c/fields/Monto_Cambio_SE__c.field-meta.xml
<CustomField>
    <fullName>Monto_Cambio_SE__c</fullName>
    <label>Monto por cambio de Segmento Espacial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>