force-app/main/default/objects/ApprovalProcess__c/fields/Monto_pendiente_por_pagar__c.field-meta.xml
<CustomField>
    <fullName>Monto_pendiente_por_pagar__c</fullName>
    <description>- Saldo pendientes de pago</description>
    <label>Monto pendiente por pagar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>