force-app/main/default/objects/ApprovalProcess__c/fields/Motivo_rechazo_o_cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_rechazo_o_cancelacion__c</fullName>
    <description
	>Si la etapa del proceso de aprobación es &quot;Rechazado&quot; o &quot;Cancelado&quot;, entonces éste campo es obligatorio</description>
    <inlineHelpText
	>Si la etapa del proceso de aprobación es &quot;Rechazado&quot; o &quot;Cancelado&quot;, entonces éste campo es obligatorio</inlineHelpText>
    <label>Motivo rechazo o cancelación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>