force-app/main/default/objects/ApprovalProcess__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <description>Describe brevemente el proceso de aprobación para que puedas encontrarlo fácilmente.</description>
    <externalId>true</externalId>
    <label>Nombre</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>