force-app/main/default/objects/ApprovalProcess__c/fields/NombreDelProyecto__c.field-meta.xml
<CustomField>
    <fullName>NombreDelProyecto__c</fullName>
    <description>Nombre del Proyecto del Expediente Proyecto, se usa para plantillas de correo</description>
    <formula>Opportunity__r.NombreDelProyecto__r.Nombre_Completo__c</formula>
    <inlineHelpText>Nombre del Proyecto del Expediente Proyecto, se usa para plantillas de correo</inlineHelpText>
    <label>NombreDelProyecto</label>
    <type>Text</type>
</CustomField>