force-app/main/default/objects/ApprovalProcess__c/fields/Numero_de_sitios__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_sitios__c</fullName>
    <label>Número de sitios</label>
    <summaryForeignKey
	>RGU_Change_to_approve__c.Approval_Process__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>