force-app/main/default/objects/ApprovalProcess__c/fields/Numero_sitios_baja__c.field-meta.xml
<CustomField>
    <fullName>Numero_sitios_baja__c</fullName>
    <description>Es el numero de sitos seleccionados para su baja definitiva</description>
    <inlineHelpText>Es el numero de sitos seleccionados para su baja definitiva</inlineHelpText>
    <label>Número de sitios a dar de baja</label>
    <summaryForeignKey>RGU_Change_to_approve__c.Approval_Process__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>