force-app/main/default/objects/ApprovalProcess__c/fields/Observaciones_AI__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_AI__c</fullName>
    <label>Observaciones AI</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>