force-app/main/default/objects/ApprovalProcess__c/fields/Observaciones_de_Control_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_de_Control_Comercial__c</fullName>
    <label>Observaciones de Control Comercial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>