force-app/main/default/objects/ApprovalProcess__c/fields/Observaciones_del_Ejecutivo_de_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_del_Ejecutivo_de_Ventas__c</fullName>
    <inlineHelpText>Agregar mayor información que requiera compartir con el comité de dirección para el proceso de aprobación de baja.</inlineHelpText>
    <label>Observaciones del Ejecutivo de Ventas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>