force-app/main/default/objects/ApprovalProcess__c/fields/Observaciones_Infraestructura__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Infraestructura__c</fullName>
    <label>Observaciones Infraestructura</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>