force-app/main/default/objects/ApprovalProcess__c/fields/Observaciones_Legal__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Legal__c</fullName>
    <label>Observaciones Legal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>