force-app/main/default/objects/ApprovalProcess__c/fields/Observaciones_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Pricing__c</fullName>
    <label>Observaciones Pricing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>