force-app/main/default/objects/ApprovalProcess__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <description>Nombre del expediente de proyecto, se usa para las plantillas de correo</description>
    <formula>Opportunity__r.Name</formula>
    <inlineHelpText>Nombre del expediente de proyecto, se usa para las plantillas de correo</inlineHelpText>
    <label>Nombre de la Oportunidad</label>
    <type>Text</type>
</CustomField>