force-app/main/default/objects/ApprovalProcess__c/fields/Otros_servicios_a_cancelar__c.field-meta.xml
<CustomField>
    <fullName>Otros_servicios_a_cancelar__c</fullName>
    <inlineHelpText>Describir o agregar información de otros servicios que se requeriran cancelar, tales como hosting, IP pública, VPN, enlaces LAN to LAN, suscripciones etc.</inlineHelpText>
    <label>Otros servicios a cancelar</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>