force-app/main/default/objects/ApprovalProcess__c/fields/Par_metros_de_rentabilidad__c.field-meta.xml
<CustomField>
    <fullName>Par_metros_de_rentabilidad__c</fullName>
    <description
	>Se elige de una lista el cumplimiento de la políticas de rentabilidad</description>
    <inlineHelpText
	>Indicar si cumple con las políticas de rentabilidad.</inlineHelpText>
    <label>Parámetros de rentabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Aplica</fullName>
                <default>true</default>
                <label>No Aplica</label>
            </value>
            <value>
                <fullName>Cumple</fullName>
            </value>
            <value>
                <fullName>No Cumple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>