force-app/main/default/objects/ApprovalProcess__c/fields/Payback__c.field-meta.xml
<CustomField>
    <fullName>Payback__c</fullName>
    <description>PAYBACK = Meses para recuperar el capital inicial</description>
    <inlineHelpText
	>PAYBACK = Meses para recuperar el capital inicial</inlineHelpText>
    <label>Payback</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>