force-app/main/default/objects/ApprovalProcess__c/fields/Penalizacion_por_cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Penalizacion_por_cancelacion__c</fullName>
    <description>- Penalización por cancelación anticipada</description>
    <label>Penalización por cancelación anticipada</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>