force-app/main/default/objects/ApprovalProcess__c/fields/PlazoAContratarMeses__c.field-meta.xml
<CustomField>
    <fullName>PlazoAContratarMeses__c</fullName>
    <description
	>Plazo a contratar a meses del Expediente Proyecto, se usa para plantillas de correo</description>
    <formula>Opportunity__r.PlazoAContratarMeses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
	>Plazo a contratar a meses del Expediente Proyecto, se usa para plantillas de correo</inlineHelpText>
    <label>PlazoAContratarMeses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>