force-app/main/default/objects/ApprovalProcess__c/fields/PO_Orden_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>PO_Orden_de_Servicio__c</fullName>
    <description>Se cuenta con una orden de compra o servicio</description>
    <inlineHelpText>Indicar si se tiene el soporte para cobrar el servicio (Orden de compra, carta compromiso, solicitud escrita de una persona autorizada para contratar servicios, etc.)</inlineHelpText>
    <label>PO / Orden de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Aplica</fullName>
                <default>true</default>
                <label>No Aplica</label>
            </value>
            <value>
                <fullName>Cumple</fullName>
            </value>
            <value>
                <fullName>No Cumple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>